# tbh-automod-cs-bot

./: .gitignore  README.md  bot.py  intervener.py  moderator.py  requirements.txt  setup.cfg
src/automod/: bot.py  complete.py  config.py  intervener.py  moderator.py  slow_chat_packager.py  utils.py
