[metadata]
name = smarter_automod
description = Automod that uses the jurassic model by AI21 to calm down the chat whenever appropriate
author = shenafield
platforms = unix, linux, osx, sygwin, win32
classifiers = 
    Programming Language :: Python :: 3.10

[options]
packages =
    automod
install_requires =
    py-cord>=2.0.0b4
    python-dotenv>=0.20
    requests>=2.27
    humanize>=4.0.0
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    smarter-automod = automod.bot:main